--- a/index.html
+++ b/index.html
@@ -2158,6 +2158,10 @@
         @media (max-width: 768px) {
             .glitch {
                 font-size: 2.5rem !important;
+                /* Remove gradient on mobile for better readability */
+                background: none !important;
+                color: var(--light) !important;
+                -webkit-text-fill-color: var(--light) !important;
             }
             .hero-title {
                 font-size: 1.3rem !important;
@@ -2170,6 +2174,10 @@
         @media (max-width: 480px) {
             .glitch {
                 font-size: 2rem !important;
+                /* Remove gradient on mobile for better readability */
+                background: none !important;
+                color: var(--light) !important;
+                -webkit-text-fill-color: var(--light) !important;
             }
             .hero-title {
                 font-size: 1.1rem !important;
