Disabled Loading Screen

--- a/index.html
+++ b/index.html
@@ -2448,8 +2448,8 @@
 <body>
 
 
-    <!-- Loading Screen -->
-    <div class="loading-screen" id="loading-screen">
+    <!-- Loading Screen - DISABLED (No more waiting!) -->
+    <!-- <div class="loading-screen" id="loading-screen">
         <div class="loading-content">
             <div class="loading-logo">
                 <span class="loading-text">HP</span>
@@ -2462,7 +2462,7 @@
             </div>
             <div class="loading-percentage">0%</div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Animated Background -->
     <div class="bg-animation">
@@ -2903,7 +2903,8 @@
 
     <!-- Scripts -->
     <script>
-        // Loading Screen - Simplified approach
+        // Loading Screen - DISABLED (commented out)
+        /*
         const loadingScreen = document.getElementById('loading-screen');
         const progressBar = document.querySelector('.loading-progress');
         const percentage = document.querySelector('.loading-percentage');
@@ -2958,6 +2959,7 @@
                 hideLoadingScreen();
             }
         }, 5000);
+        */
 
         // Enhanced scroll effects for parallax
         function initEnhancedScrollEffects() {
