--- a/index.html
+++ b/index.html
@@ -2158,10 +2158,7 @@
         @media (max-width: 768px) {
             .glitch {
                 font-size: 2.5rem !important;
-                /* Remove gradient on mobile for better readability */
-                background: none !important;
-                color: var(--light) !important;
-                -webkit-text-fill-color: var(--light) !important;
+                /* Keep gradient effect on mobile like desktop */
             }
             .hero-title {
                 font-size: 1.3rem !important;
@@ -2174,10 +2171,7 @@
         @media (max-width: 480px) {
             .glitch {
                 font-size: 2rem !important;
-                /* Remove gradient on mobile for better readability */
-                background: none !important;
-                color: var(--light) !important;
-                -webkit-text-fill-color: var(--light) !important;
+                /* Keep gradient effect on mobile like desktop */
             }
             .hero-title {
                 font-size: 1.1rem !important;
