Mobile Friendly Attempt 6

--- a/index.html
+++ b/index.html
@@ -2158,12 +2158,12 @@
         @media (max-width: 768px) {
             .glitch {
                 font-size: 2.5rem !important;
-                /* Remove gradient effects on mobile for better readability */
+                /* Use purple gradient color on mobile for better visibility */
                 background: none !important;
-                color: var(--light) !important;
-                -webkit-text-fill-color: var(--light) !important;
-                text-shadow: 0 2px 20px rgba(124, 58, 237, 0.6),
-                             0 0 40px rgba(236, 72, 153, 0.4) !important;
+                color: #a78bfa !important;
+                -webkit-text-fill-color: #a78bfa !important;
+                text-shadow: 0 2px 20px rgba(124, 58, 237, 0.8),
+                             0 0 40px rgba(236, 72, 153, 0.5) !important;
             }
             .glitch::before,
             .glitch::after {
@@ -2191,12 +2191,12 @@
         @media (max-width: 480px) {
             .glitch {
                 font-size: 2rem !important;
-                /* Remove gradient effects on mobile for better readability */
+                /* Use purple gradient color on mobile for better visibility */
                 background: none !important;
-                color: var(--light) !important;
-                -webkit-text-fill-color: var(--light) !important;
-                text-shadow: 0 2px 20px rgba(124, 58, 237, 0.6),
-                             0 0 40px rgba(236, 72, 153, 0.4) !important;
+                color: #a78bfa !important;
+                -webkit-text-fill-color: #a78bfa !important;
+                text-shadow: 0 2px 20px rgba(124, 58, 237, 0.8),
+                             0 0 40px rgba(236, 72, 153, 0.5) !important;
             }
             .glitch::before,
             .glitch::after {
