--- a/index.html
+++ b/index.html
@@ -2632,9 +2632,32 @@
     <section id="experience">
         <div class="section-title">Experience</div>
         <div class="timeline">
-            <!-- AI Research Assistant: logo on the right -->
+            <!-- MITRE Software Engineer Co-op: logo on the right -->
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
+                <div class="timeline-content">
+                    <h4>Incoming Software Engineer Co-op</h4>
+                    <div class="timeline-meta">
+                        <span class="company">MITRE Corporation</span>
+                    </div>
+                    <div class="timeline-meta">
+                        <span class="date">Expected Spring 2026</span>
+                        <span class="location">📍 Shaw Air Force Base, SC</span>
+                    </div>
+                    <p>
+                        Anticipating involvement in critical software development projects within MITRE's domain of national security and advanced technology.
+                    </p>
+                </div>
+                <div class="timeline-logo" style="left: 65%; top: 2.5rem; width: 70px;">
+                    <img src="mitre_logo.jpg" alt="MITRE Logo" style="width: 300px; height: auto;">
+                </div>
+            </div>
+            <!-- AI Research Assistant: logo on the left -->
+            <div class="timeline-item">
+                <div class="timeline-dot"></div>
+                <div class="timeline-logo" style="left: 15%; top: 2.5rem; width: 70px; transform: none;">
+                    <img src="clemson-logo.png" alt="Clemson Tigers Logo" style="width: 300px; height: auto;">
+                </div>
                 <div class="timeline-content">
                     <h4>AI Research Assistant</h4>
                     <div class="timeline-meta">
@@ -2648,16 +2671,10 @@
                         Utilize Jupyter Notebooks and Linux high-performance computing (HPC) cluster to efficiently train, evaluate, and optimize large-scale models on advertisement footage
                     </p>
                 </div>
-                <div class="timeline-logo" style="left: 65%; top: 2.5rem; width: 70px;">
-                    <img src="clemson-logo.png" alt="Clemson Tigers Logo" style="width: 300px; height: auto;">
-                </div>
             </div>
-            <!-- Undergraduate Teaching Assistant: logo on the left -->
+            <!-- Undergraduate Teaching Assistant: logo on the right -->
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
-                <div class="timeline-logo" style="left: 15%; top: 2.5rem; width: 70px; transform: none;">
-                    <img src="clemson-logo.png" alt="Clemson Tigers Logo" style="width: 300px; height: auto;">
-                </div>
                 <div class="timeline-content">
                     <h4>Undergraduate Teaching Assistant</h4>
                     <div class="timeline-meta">
@@ -2671,10 +2688,16 @@
                         Review and provide feedback on 15–21 programming assignments per week, ensuring timely evaluation and helping students improve code quality and problem-solving skills.
                     </p>
                 </div>
+                <div class="timeline-logo" style="left: 65%; top: 2.5rem; width: 70px;">
+                    <img src="clemson-logo.png" alt="Clemson Tigers Logo" style="width: 300px; height: auto;">
+                </div>
             </div>
-            <!-- Privacy Compliance Research Assistant: logo on the right -->
+            <!-- Privacy Compliance Research Assistant: logo on the left -->
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
+                <div class="timeline-logo" style="left: 15%; top: 2.5rem; width: 70px; transform: none;">
+                    <img src="clemson-logo.png" alt="Clemson Tigers Logo" style="width: 300px; height: auto;">
+                </div>
                 <div class="timeline-content">
                     <h4>Privacy Compliance Research Assistant</h4>
                     <div class="timeline-meta">
@@ -2687,9 +2710,6 @@
                         Analyzed 14 research papers on privacy policies, data collection disclosures, and regulatory compliance in appified ecosystems to assess their impact on privacy transparency and user protection.
                         Synthesized findings into a survey paper, summarizing key trends, challenges, and advancements in privacy labels across different platforms.
                     </p>
-                </div>
-                <div class="timeline-logo" style="left: 65%; top: 2.5rem; width: 70px;">
-                    <img src="clemson-logo.png" alt="Clemson Tigers Logo" style="width: 300px; height: auto;">
                 </div>
             </div>
             <!-- Motel Receptionist: logo on the right 
