--- a/index.html
+++ b/index.html
@@ -2636,7 +2636,7 @@
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
                 <div class="timeline-content">
-                    <h4>Incoming Software Engineer Co-op</h4>
+                    <h4>Software Engineer Co-op</h4>
                     <div class="timeline-meta">
                         <span class="company">MITRE Corporation</span>
                     </div>
