--- a/index.html
+++ b/index.html
@@ -2599,7 +2599,7 @@
                         </div>
                     </div>
                     <div class="hero-title" style="text-align: left; font-size: 2rem; margin: 0; position: relative; z-index: 2; white-space: nowrap;">
-                        CS, AI, Cybersecurity @ Clemson University
+                        CS + AI + Finance @ Clemson University
                     </div>
                     <!-- Typing animation below the title -->
                     <div id="typing-animation" style="margin-left: 0; margin-top: 1.2rem; font-size: 2rem; color: var(--primary); font-weight: 700; min-height: 2.2rem; text-align: left; letter-spacing: 0.5px;"></div>
@@ -2621,7 +2621,7 @@
             <div class="glass-card" style="grid-column: 1 / -1;">
                 <div class="card-icon">Hi, I'm Harshal👋</div>
                 <p style="font-size: 1.3rem;">
-                    I am a first-generation student at Clemson University from Union, SC. I am majoring in Computer Science with minors in Artificial Intelligence and Cybersecurity. When I’m not coding, you can usually find me on the basketball court, going for a run, watching anime, or playing video games.
+                    I am a first-generation student at Clemson University from Union, SC. I am majoring in Computer Science with minors in Artificial Intelligence and Finance. When I’m not coding, you can usually find me on the basketball court, going for a run, watching anime, or playing video games.
                     I am currently an AI Research Assistant for the Watt AI Program and an undergraduate teaching assistant for a Python programming course at Clemson University.
                 </p>
             </div>
