Updated AI Research bullet points

--- a/index.html
+++ b/index.html
@@ -2662,13 +2662,13 @@
                     <h4>AI Research Assistant</h4>
                     <div class="timeline-meta">
                         <span class="company">Clemson University - Watt AI Program</span>
-                        <span class="date">Aug. 2025–Present</span>
+                        <span class="date">Aug. 2025–Dec. 2025</span>
                         <span class="location">📍 Clemson, SC</span>
                     </div>
                     <p>
-                        Develop advanced vision-based Large Language Model (LLM) pipelines using pretrained Hugging Face models in PyTorch to analyze TV commercial videos and extract structured insights from ad content.
-                        Implement automated techniques for celebrity recognition, demographic analysis, and detailed activity description within advertisement footage.
-                        Utilize Jupyter Notebooks and Linux high-performance computing (HPC) cluster to efficiently train, evaluate, and optimize large-scale models on advertisement footage
+                        Developed an end-to-end multimodal AI pipeline to analyze TV commercial videos by integrating Qwen vision-language models and Whisper (ASR), achieving 100% accuracy in brand identification and ad themes
+                        Automated structured advertisement content analysis, achieving accuracies of ~81% for celebrity recognition, ~63% for gender classification, and ~47% for object counting across 32 TV commercial videos
+                        Optimized large-scale video inference on an HPC cluster using PyTorch, Hugging Face, AWQ quantization, and FFmpeg, reducing runtime to 41–67 seconds per task and processing 32 videos in ~1.33 hours
                     </p>
                 </div>
             </div>
@@ -2679,7 +2679,7 @@
                     <h4>Undergraduate Teaching Assistant</h4>
                     <div class="timeline-meta">
                         <span class="company">Clemson University - School of Computing</span>
-                        <span class="date">Aug. 2025–Present</span>
+                        <span class="date">Aug. 2025–Dec. 2025</span>
                         <span class="location">📍 Clemson, SC</span>
                     </div>
                     <p>
@@ -2898,13 +2898,13 @@
                         <span>Pandas</span>
                     </div>
                     <div class="hexagon">
-                        <span>SQLAlchemy</span>
+                        <span>MatPlotLib</span>
                     </div>
                     <div class="hexagon">
                         <span>Leaflet.js</span>
                     </div>
                     <div class="hexagon">
-                        <span>MatPlotLib</span>
+                        <span>SQLAlchemy</span>
                     </div>
                 </div>
             </div>
@@ -2937,7 +2937,7 @@
                         <span>Linux</span>
                     </div>
                     <div class="hexagon">
-                        <span>Vim</span>
+                        <span>Hugging Face</span>
                     </div>
                     <div class="hexagon">
                         <span>Expo</span>
