Added periods for AI Research

--- a/index.html
+++ b/index.html
@@ -2666,9 +2666,9 @@
                         <span class="location">📍 Clemson, SC</span>
                     </div>
                     <p>
-                        Developed an end-to-end multimodal AI pipeline to analyze TV commercial videos by integrating Qwen vision-language models and Whisper (ASR), achieving 100% accuracy in brand identification and ad themes
-                        Automated structured advertisement content analysis, achieving accuracies of ~81% for celebrity recognition, ~63% for gender classification, and ~47% for object counting across 32 TV commercial videos
-                        Optimized large-scale video inference on an HPC cluster using PyTorch, Hugging Face, AWQ quantization, and FFmpeg, reducing runtime to 41–67 seconds per task and processing 32 videos in ~1.33 hours
+                        Developed an end-to-end multimodal AI pipeline to analyze TV commercial videos by integrating Qwen vision-language models and Whisper (ASR), achieving 100% accuracy in brand identification and ad themes.
+                        Automated structured advertisement content analysis, achieving accuracies of ~81% for celebrity recognition, ~63% for gender classification, and ~47% for object counting across 32 TV commercial videos.
+                        Optimized large-scale video inference on an HPC cluster using PyTorch, Hugging Face, AWQ quantization, and FFmpeg, reducing runtime to 41–67 seconds per task and processing 32 videos in ~1.33 hours.
                     </p>
                 </div>
             </div>
