New professional headshot photo

--- a/index.html
+++ b/index.html
@@ -2608,7 +2608,7 @@
             <!-- Right: Headshot Image (much bigger, with placeholder) -->
             <div style="display: flex; align-items: center; justify-content: center;">
                 <div class="hero-headshot">
-                    <img src="pfp.jpg" alt="Harshal Patel Headshot" />
+                    <img src="headshot.jpg" alt="Harshal Patel Headshot" />
                 </div>
             </div>
         </div>
