About me and ai research description changes

--- a/index.html
+++ b/index.html
@@ -2622,7 +2622,7 @@
                 <div class="card-icon">Hi, I'm Harshal👋</div>
                 <p style="font-size: 1.3rem;">
                     I am a first-generation student at Clemson University from Union, SC. I am majoring in Computer Science with minors in Artificial Intelligence and Finance. When I’m not coding, you can usually find me on the basketball court, going for a run, watching anime, or playing video games.
-                    I am currently an AI Research Assistant for the Watt AI Program and an undergraduate teaching assistant for a Python programming course at Clemson University.
+                    I am currently doing a Software Engineering Co-op at MITRE.
                 </p>
             </div>
         </div>
@@ -2641,7 +2641,7 @@
                         <span class="company">MITRE Corporation</span>
                     </div>
                     <div class="timeline-meta">
-                        <span class="date">Expected Spring 2026</span>
+                        <span class="date">Jan. 2026 - Present</span>
                         <span class="location">📍 Shaw Air Force Base, SC</span>
                     </div>
                     <p>
@@ -2662,13 +2662,13 @@
                     <h4>AI Research Assistant</h4>
                     <div class="timeline-meta">
                         <span class="company">Clemson University - Watt AI Program</span>
-                        <span class="date">Aug. 2025–Dec. 2025</span>
+                        <span class="date">Aug. 2025 – Dec. 2025</span>
                         <span class="location">📍 Clemson, SC</span>
                     </div>
                     <p>
                         Developed an end-to-end multimodal AI pipeline to analyze TV commercial videos by integrating Qwen vision-language models and Whisper (ASR), achieving 100% accuracy in brand identification and ad themes.
-                        Automated structured advertisement content analysis, achieving accuracies of ~81% for celebrity recognition, ~63% for gender classification, and ~47% for object counting across 32 TV commercial videos.
-                        Optimized large-scale video inference on an HPC cluster using PyTorch, Hugging Face, AWQ quantization, and FFmpeg, reducing runtime to 41–67 seconds per task and processing 32 videos in ~1.33 hours.
+                        Automated structured advertisement content analysis, achieving accuracies of 81% for celebrity recognition, 63% for gender classification, and 47% for object counting across 32 TV commercial videos.
+                        Optimized large-scale video inference on an HPC cluster using PyTorch, Hugging Face, AWQ quantization, and FFmpeg, reducing runtime to 41–67 seconds per task and processing 32 videos in 1.33 hours.
                     </p>
                 </div>
             </div>
@@ -2679,7 +2679,7 @@
                     <h4>Undergraduate Teaching Assistant</h4>
                     <div class="timeline-meta">
                         <span class="company">Clemson University - School of Computing</span>
-                        <span class="date">Aug. 2025–Dec. 2025</span>
+                        <span class="date">Aug. 2025 – Dec. 2025</span>
                         <span class="location">📍 Clemson, SC</span>
                     </div>
                     <p>
@@ -2702,7 +2702,7 @@
                     <h4>Privacy Compliance Research Assistant</h4>
                     <div class="timeline-meta">
                         <span class="company">Clemson University - Creative Inquiry</span>
-                        <span class="date">Jan. 2025–May 2025</span>
+                        <span class="date">Jan. 2025 – May 2025</span>
                         <span class="location">📍 Clemson, SC</span>
                     </div>
                     <p>
@@ -2971,7 +2971,7 @@
 
     <!-- Easter Egg Hint -->
     <div class="easter-egg-hint">
-        <p>🥚 <em>Psst... there are hidden easter eggs on this page. Try exploring!</em></p>
+        <p><em>There are hidden easter eggs on this page. Try exploring!</em></p>
         <small>Hint: Try clicking my name multiple times, experiment with keyboard shortcuts, or check console</small>
     </div>
     </main>
