Changed Co-op date back to expected

--- a/index.html
+++ b/index.html
@@ -2641,7 +2641,7 @@
                         <span class="company">MITRE Corporation</span>
                     </div>
                     <div class="timeline-meta">
-                        <span class="date">Jan. 2026 - Present</span>
+                        <span class="date">Expected Spring 2026</span>
                         <span class="location">📍 Shaw Air Force Base, SC</span>
                     </div>
                     <p>
