Made MITRE Present

--- a/index.html
+++ b/index.html
@@ -2638,14 +2638,14 @@
                 <div class="timeline-content">
                     <h4>Software Engineer Co-op</h4>
                     <div class="timeline-meta">
-                        <span class="company">MITRE Corporation</span>
+                        <span class="company">The MITRE Corporation</span>
                     </div>
                     <div class="timeline-meta">
-                        <span class="date">Expected Spring 2026</span>
+                        <span class="date">Jan. 2026 - Present</span>
                         <span class="location">📍 Shaw Air Force Base, SC</span>
                     </div>
                     <p>
-                        Anticipating involvement in critical software development projects within MITRE's domain of national security and advanced technology.
+                        Contribute to government and federally funded projects by developing and maintaining software solutions in a collaborative engineering environment.
                     </p>
                 </div>
                 <div class="timeline-logo" style="left: 65%; top: 2.5rem; width: 70px;">
