Update experience descriptions and technologies used

--- a/index.html
+++ b/index.html
@@ -2683,9 +2683,9 @@
                         <span class="location">📍 Clemson, SC</span>
                     </div>
                     <p>
-                        Instruct a weekly lab section of 38 students in a Python programming course, providing guidance on coding fundamentals and debugging techniques.
-                        Facilitate 1-hour office hours twice weekly, assisting ~12 students per session with Python programming concepts, debugging, and assignment guidance.
-                        Review and provide feedback on 15–21 programming assignments per week, ensuring timely evaluation and helping students improve code quality and problem-solving skills.
+                        Instructed a weekly lab section of 38 students in a Python programming course, providing guidance on coding fundamentals and debugging techniques.
+                        Facilitated 1-hour office hours twice weekly, assisting ~12 students per session with Python programming concepts, debugging, and assignment guidance.
+                        Reviewed and provided feedback on 15–21 programming assignments per week, ensuring timely evaluation and helping students improve code quality and problem-solving skills.
                     </p>
                 </div>
                 <div class="timeline-logo" style="left: 65%; top: 2.5rem; width: 70px;">
@@ -2883,7 +2883,7 @@
                         <span>Node.js</span>
                     </div>
                     <div class="hexagon">
-                        <span>React.js</span>
+                        <span>Next.js</span>
                     </div>
                     <div class="hexagon">
                         <span>React Native</span>
@@ -2916,31 +2916,31 @@
                         <span>Git</span>
                     </div>
                     <div class="hexagon">
+                        <span>Docker</span>
+                    </div>
+                    <div class="hexagon">
+                        <span>Postman API</span>
+                    </div>
+                    <div class="hexagon">
+                        <span>Jira</span>
+                    </div>
+                    <div class="hexagon">
+                        <span>GitLab</span>
+                    </div>
+                    <div class="hexagon">
                         <span>PostgreSQL</span>
-                    </div>
-                    <div class="hexagon">
-                        <span>Firebase</span>
-                    </div>
-                    <div class="hexagon">
-                        <span>Vercel</span>
-                    </div>
-                    <div class="hexagon">
-                        <span>RESTful APIs</span>
                     </div>
                     <div class="hexagon">
                         <span>VS Code</span>
                     </div>
                     <div class="hexagon">
-                        <span>Jupyter</span>
-                    </div>
-                    <div class="hexagon">
                         <span>Linux</span>
                     </div>
                     <div class="hexagon">
-                        <span>Hugging Face</span>
+                        <span>Jupyter</span>
                     </div>
                     <div class="hexagon">
-                        <span>Expo</span>
+                        <span>Hugging Face</span>
                     </div>
                 </div>
             </div>
