Add GitHub link to AirAware project

--- a/index.html
+++ b/index.html
@@ -2744,6 +2744,9 @@
                     <h3>AirAware</h3>
                     <div class="project-links">
                         <!-- GitHub link to be added -->
+                        <a href="https://github.com/Hersh3y/AirAware" class="project-link" target="_blank" aria-label="AirAware GitHub">
+                            <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub" />
+                        </a>
                     </div>
                 </div>
                 <div class="project-body">
